order/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: msa
  labels:
    app: order
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: ghcr.io/acmexii/delivery:istio-v1
          ports:
            - containerPort: 8080
          resources:
              requests:
                cpu: "200m"
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: msa
  labels:
    app: order
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: order
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-gateway
  namespace: msa
spec:
  hosts:
  - "*"
  gateways:
  - front-gateway
  http:
  - match:
    - uri:
        prefix: /orders
    route:
    - destination:
        host: order
        port:
          number: 8080
